# triage-bandit-sandbox

./: .gitignore  Makefile  README.md  pipeline.sh  pottery.json  pyproject.toml
.dvc/: config
.github/workflows/: publish-wheel.yml  train-model.yaml
pipelines/: Dockerfile  job.yaml.template  training-requirements.txt
scripts/: bump_model_version.sh  create_github_report.sh  publish_model.sh
triage_bandit_sandbox/: evaluate.py  predict.py  train.py
triage_bandit_sandbox/data/: download_data.py  io.py
triage_bandit_sandbox/features/: create_train_test_split.py  preprocess.py
triage_bandit_sandbox/inference/: __init__.py  config.py  constants.py  engine.py  inference.py  models.py  probabilities.py
triage_bandit_sandbox/triage_models_sandbox/: __init__.py
triage_bandit_sandbox/triage_models_sandbox/interfaces/: __init__.py  triage_data.py  triage_data_transformers.py  triage_model.py
triage_bandit_sandbox/triage_models_sandbox/triage_data_transformers/: __init__.py  base_data_extractor.py  coarse_grainers.py  data_balance.py  label_encoders.py  utility_model_transformer.py
triage_bandit_sandbox/triage_models_sandbox/triage_models/: __init__.py  triage_bandit.py  triage_classifier.py  triage_utility.py
triage_bandit_sandbox/utils/: constants.py  inference_model_from_json.py
